--- a/static/web.config
+++ b/static/web.config
@@ -74,6 +74,8 @@
          <clear />
          <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </httpModules>
+
+      <httpRuntime enableVersionHeader="false" />
    </system.web>
 
    <system.codedom>
@@ -90,6 +92,34 @@
    </system.codedom>
 
    <system.webServer>
+      <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files" minFileSizeForComp="1" staticCompressionIgnoreHitFrequency="true">
+         <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll" staticCompressionLevel="9" dynamicCompressionLevel="9" />
+         <staticTypes>
+            <add mimeType="text/*" enabled="true" />
+            <add mimeType="message/*" enabled="true" />
+            <add mimeType="application/javascript" enabled="true" />
+            <add mimeType="application/json" enabled="true" />
+            <add mimeType="*/*" enabled="false" />
+         </staticTypes>
+      </httpCompression>
+      <urlCompression doStaticCompression="true" doDynamicCompression="true" dynamicCompressionBeforeCache="true" />
+      <staticContent>
+         <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" setEtag="false" />
+      </staticContent>
+      <caching enabled="true" enableKernelCache="true">
+         <profiles>
+            <add extension=".aspx" policy="CacheForTimePeriod" kernelCachePolicy="CacheForTimePeriod" duration="01:00:00" />
+         </profiles>
+      </caching>
+      <httpProtocol>
+         <customHeaders>
+            <remove name="X-Powered-By" />
+            <add name="X-Frame-Options" value="DENY" />
+            <add name="X-XSS-Protection" value="1; mode=block"/>
+            <add name="X-Content-Type-Options" value="nosniff" />
+            <add name="X-UA-Compatible" value="IE=Edge,chrome=1" />
+         </customHeaders>
+      </httpProtocol>
       <httpErrors errorMode="Custom" defaultResponseMode="ExecuteURL">
          <remove statusCode="404" subStatusCode="-1" />
          <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
@@ -107,6 +137,14 @@
          <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
          <add name="ScriptResource" verb="GET,HEAD" path="ScriptResource.axd" preCondition="integratedMode" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </handlers>
+      <rewrite>
+         <outboundRules>
+            <rule name="Remove RESPONSE_Server" >
+               <match serverVariable="RESPONSE_Server" pattern=".+" />
+               <action type="Rewrite" value="" />
+            </rule>
+         </outboundRules>
+      </rewrite>
    </system.webServer>
 
    <runtime>
