--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "AirQualityPartnership.org website",
   "private": true,
   "scripts": {
-    "serve": "start live-server dist",
-    "build": "webpack",
-    "deploy": "npm run build && xcopy dist Z:\\ /s /e /y /d",
-    "test": "npm test",
+    "build": "webpack --mode=production",
     "licenses": "license-checker --csv --relativeLicensePath --out dependency_licenses.csv"
   },
   "author": "Jesse Strangfeld <jstrangfeld@dvrpc.org>",
@@ -22,7 +19,6 @@
     "html-loader": "^0.5.5",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
-    "live-server": "^1.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "postcss-loader": "^2.1.6",
     "postcss-preset-env": "^5.2.3",
