--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   "author": "Jesse Strangfeld <jstrangfeld@dvrpc.org>",
   "license": "CC0-1.0",
   "browserslist": [
-    ">1% in US"
+    ">1% in US",
+    "ie 11"
   ],
   "devDependencies": {
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
-    "cssnano": "^4.0.3",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "^5.0.1",
+    "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
     "html-loader": "^0.5.5",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "postcss-loader": "^2.1.6",
-    "postcss-preset-env": "^5.2.3",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.16.2",
-    "webpack-cli": "^3.1.0"
+    "mini-css-extract-plugin": "^0.5.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.6.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   },
   "optionalDependencies": {
     "license-checker": "^8.0.4"
