Add SSL redirects

--- a/static/web.config
+++ b/static/web.config
@@ -138,6 +138,16 @@
          <add name="ScriptResource" verb="GET,HEAD" path="ScriptResource.axd" preCondition="integratedMode" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </handlers>
       <rewrite>
+         <rules>
+            <rule name="HTTP to HTTPS redirect" stopProcessing="true">
+               <match url="(.*)" />
+                  <conditions logicalGrouping="MatchAny">
+                     <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+                     <add input="{HTTP_HOST}" pattern="^www\." negate="true" ignoreCase="true" />
+                  </conditions>
+               <action type="Redirect" redirectType="Found" url="https://www.airqualitypartnership.org/{R:1}" />
+            </rule>
+         </rules>
          <outboundRules>
             <rule name="Remove RESPONSE_Server" >
                <match serverVariable="RESPONSE_Server" pattern=".+" />
