--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AirQualityPartnership.org website",
   "private": true,
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "rimraf dist && webpack --mode=production",
     "licenses": "license-checker --csv --relativeLicensePath --out dependency_licenses.csv"
   },
   "author": "Jesse Strangfeld <jstrangfeld@dvrpc.org>",
@@ -14,10 +14,10 @@
     "ie 11"
   ],
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "babel-loader": "^8.0.5",
-    "copy-webpack-plugin": "^5.0.1",
+    "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "html-loader": "^0.5.5",
@@ -26,10 +26,11 @@
     "mini-css-extract-plugin": "^0.5.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
+    "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "workbox-webpack-plugin": "^4.1.1"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "workbox-webpack-plugin": "^4.3.0"
   },
   "optionalDependencies": {
     "license-checker": "^8.0.4"
