--- a/static/web.config
+++ b/static/web.config
@@ -104,7 +104,7 @@
       </httpCompression>
       <urlCompression doStaticCompression="true" doDynamicCompression="true" dynamicCompressionBeforeCache="true" />
       <staticContent>
-         <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" setEtag="false" />
+         <clientCache cacheControlMode="DisableCache" />
       </staticContent>
       <caching enabled="true" enableKernelCache="true">
          <profiles>
@@ -147,6 +147,15 @@
                   </conditions>
                <action type="Redirect" redirectType="Found" url="https://www.airqualitypartnership.org/{R:1}" />
             </rule>
+            <rule name="Add trailing slash" stopProcessing="true">
+               <match url="(.*[^/])$" />
+               <conditions>
+                  <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                  <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                  <add input="{REQUEST_FILENAME}" pattern="(.*?)\.[a-zA-Z]{1,4}$" negate="true" />
+               </conditions>
+               <action type="Redirect" redirectType="Permanent" url="{R:1}/" />
+            </rule> 
          </rules>
          <outboundRules>
             <rule name="Remove RESPONSE_Server" >
