--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "ie 11"
   ],
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.5",
-    "copy-webpack-plugin": "^5.0.2",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "html-loader": "^0.5.5",
@@ -28,12 +28,13 @@
     "postcss-preset-env": "^6.6.0",
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
-    "workbox-webpack-plugin": "^4.3.0"
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2"
   },
   "optionalDependencies": {
     "license-checker": "^8.0.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "offline-plugin": "^5.0.7"
+  }
 }
