Added routing for 404 page

--- a/static/web.config
+++ b/static/web.config
@@ -39,8 +39,8 @@
             <add namespace="System.Collections.Specialized"/>
             <add namespace="System.Configuration"/>
             <add namespace="System.Data"/>
-			<add namespace="System.Data.OleDb"/>
-			<add namespace="System.Text"/>
+			   <add namespace="System.Data.OleDb"/>
+			   <add namespace="System.Text"/>
             <add namespace="System.Text.RegularExpressions"/>
             <add namespace="System.Linq"/>
             <add namespace="System.Xml.Linq"/>
@@ -120,9 +120,9 @@
             <add name="X-UA-Compatible" value="IE=Edge,chrome=1" />
          </customHeaders>
       </httpProtocol>
-      <httpErrors errorMode="Custom" defaultResponseMode="ExecuteURL">
+      <httpErrors errorMode="Custom" defaultResponseMode="Redirect">
          <remove statusCode="404" subStatusCode="-1" />
-         <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
+         <error statusCode="404" path="https://www.airqualitypartnership.org/404/" responseMode="Redirect" />
       </httpErrors>
       <validation validateIntegratedModeConfiguration="false"/>
       <modules>
