--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
     "ie 11"
   ],
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "copy-webpack-plugin": "^6.0.3",
+    "css-loader": "^3.6.0",
     "cssnano": "^4.1.10",
-    "html-loader": "^1.0.0",
-    "html-webpack-inline-source-plugin": "^1.0.0-beta.2",
-    "html-webpack-plugin": "^4.0.1",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.0.0-beta.14",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "rimraf": "^3.0.2",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "optionalDependencies": {
     "license-checker": "^25.0.1"
   },
   "dependencies": {
-    "offline-plugin": "^5.0.7"
+    "offline-plugin": "^5.0.7",
+    "react-dev-utils": "^10.2.1"
   }
 }
